Change all redirects from old domain

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 				<a class="nav-link" href="#status" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa fa-address-book"></i> Status</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="https://pierwsza-test.ga/MinecraftStats/" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-address-card"></i> Statystyki</a>
+				<a class="nav-link" href="https://zyletkamc.ga/MinecraftStats/" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-address-card"></i> Statystyki</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="https://mapa.pierwsza-test.ga" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-map-location-dot"></i> Mapa</a>
+				<a class="nav-link" href="https://mapa.zyletkamc.ga" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-map-location-dot"></i> Mapa</a>
 			</li>
 	
 			</ul>
@@ -92,7 +92,7 @@
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title">graj.pierwsza-test.ga</h5>
+					<h5 class="modal-title">graj.zyletkamc.ga</h5>
 					<button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
 				</div>
 			<div class="modal-body text-center" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">Mamy nadzieję, że wkrótce zobaczymy się online!
@@ -113,7 +113,7 @@
 	<header id="jumbo">
 		<div class="jumbotron site-section info-jumbotron" style="padding-top: 150px; padding-bottom: 100px">
 			<h1 class="display-4">ŻyletkaMC</h1>
-			<p class="lead">ŻyletkaMC to najpopularniejszy serwer bez zasad etycznych</p>
+			<p class="lead">ŻyletkaMC to najlepszy serwer bez zasad etycznych</p>
 			<p class="lead">
 				<a class="btn btn-primary btn-lg btn-custom btn-custom-hover" href="#status"
 				   role="button" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop"> <i
@@ -158,10 +158,10 @@
 					Kilka razy wspomniana wolność słowa to jest motto serwera, dlatego tak bardzo naciskamy na to. Czat w grze nie będzie sprawdzany.
 					<p></p>
 					<h4>Mapa serwera</h4>
-					Fajne urozmaicenie serwera - <a href="https://mapa.pierwsza-test.ga">Mapa świata.</a> Dostępny overworld, nether i end.
+					Fajne urozmaicenie serwera - <a href="https://mapa.zyletkamc.ga">Mapa świata.</a> Dostępny overworld, nether i end.
 					<p></p>
 					<h4>Fajne statystyki</h4>
-					Możesz zobaczyć <a href="https://pierwsza-test.ga/MinecraftStats/"> swoje statystyki na naszej stronie</a>!
+					Możesz zobaczyć <a href="https://zyletkamc.ga/MinecraftStats/"> swoje statystyki na naszej stronie</a>!
 					<p></p>
 					<h4>Publiczny kod źródłowy do tej strony</h4>
 					Nie każdy serwer postanawia udostępniać swój kod do strony na Githubie. Udostępniając ten kod, pokazujemy, że ufamy wam; naszym graczom
