--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="about-summary" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 				<h4>Co to "ŻyletkaMC"?</h4>
 				Nazwa ŻyletkaMC powstała w skutku rzadkiej sraczuczi z dupki hejterów. 
-				Henryczkowo-MC powstało z myślą o wolności słowa. W grze na serwerze, możesz pisać co chcesz! Na przykład "Uważam, że ... to gorsza rasa" nie poskutkuje banem za obrażanie.
+				ŻyletkaMC powstało z myślą o wolności słowa. W grze na serwerze, możesz pisać co chcesz! Na przykład "Uważam, że ... to gorsza rasa" nie poskutkuje banem za obrażanie.
 				<p></p>
 				Jedynym wyjątkiem jest DOX'owanie (tzn. zbierania i publikowania czyichś danych osobowych i prywatnych informacji takich jak: imię, nazwisko, adres, numer telefonu itp. i upublicznianiu ich w celu dręczenia ich.)
 				<p></p>
