Added future wiki update

--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
 					<h4>Wolność słowa</h4>
 					Kilka razy wspomniana wolność słowa to jest motto serwera, dlatego tak bardzo naciskamy na to. Czat w grze nie będzie sprawdzany.
 					<p></p>
+					<h4>Wikipedia!</h4>
+					W pewnym czasie, dodamy wikipedie servera! Cóż za ciekawe zjawisko :)
 					<h4>Mapa serwera</h4>
 					Fajne urozmaicenie serwera - <a href="https://mapa.zyletkamc.ga">Mapa świata.</a> Dostępny overworld, nether i end.
 					<p></p>
