--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+	mmmm                   "             "    #                 #
+	#   "m  mmm   mmmmm  mmm    m mm   mmm    #   m   mmm    mmm#  mmmmm
+ 	#    # #" "#  # # #    #    #"  #    #    # m"   #" "#  #" "#     m"
+ 	#    # #   #  # # #    #    #   #    #    #"#    #   #  #   #   m"
+ 	#mmm"  "#m#"  # # #  mm#mm  #   #  mm#mm  #  "m  "#m#"  "#m##  #mmmm
+
+-->
+
+
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
