--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
-	<title>ZyletkaMC</title>
+	<title>ŻyletkaMC</title>
 	<link rel="icon" type="image/x-icon" href="static/server-icon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+	<meta content="Żyletka MC" property="og:title" />
+    <meta content="ŻyletkaMC to najlepszy serwer bez zasad etycznych" property="og:description" />
+    <meta content="https://zyletkamc.ga" property="og:url" />
+    <meta content="https://zyletkamc.ga/static/icon_white.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
 	<meta http-equiv="Content-Language" content="pl">
     <meta charset="UTF-8">
