--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="https://mapa.zyletkamc.ga" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-map-location-dot"></i> Mapa</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://wiki.zyletkamc.ga" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-globe"></i> Wikipedia</a>
+			</li>
 	
 			</ul>
 	
@@ -164,7 +167,7 @@
 					Kilka razy wspomniana wolność słowa to jest motto serwera, dlatego tak bardzo naciskamy na to. Czat w grze nie będzie sprawdzany.
 					<p></p>
 					<h4>Wikipedia!</h4>
-					W pewnym czasie, dodamy wikipedie servera! Cóż za ciekawe zjawisko :)
+					Czy znasz jakiś serwer mający swoją <a href="https://wiki.zyletkamc.ga">wiki swojego serwera</a>? Nie sądze :)
 					<h4>Mapa serwera</h4>
 					Fajne urozmaicenie serwera - <a href="https://mapa.zyletkamc.ga">Mapa świata.</a> Dostępny overworld, nether i end.
 					<p></p>
