Add discord link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<a class="nav-link" href="https://github.com/Dominikodz/ZyletkaMC" target="_blank" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fab fa-github"></i> GitHub</a>
 			</li>
 			<li class="nav-item me-3 me-lg-0">
-				<a class="nav-link" href="https://tenor.com/search/troll-face-dance-gifs" target="_blank" onclick="return confirm('Serwer discord będzie zrobiony potem :->.');" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fab fa-discord"></i> Discord</a>
+				<a class="nav-link" href="https://discord.gg/qz8pcsb5cC" target="_blank" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fab fa-discord"></i> Discord</a>
 			</li>
 			</ul>
 	
@@ -143,7 +143,7 @@
 				Nazwa ŻyletkaMC powstała w skutku rzadkiej sraczuczi z dupki hejterów. 
 				ŻyletkaMC powstało z myślą o wolności słowa. W grze na serwerze, możesz pisać co chcesz! Na przykład "Uważam, że ... to gorsza rasa" nie poskutkuje banem za obrażanie.
 				<p></p>
-				Jedynym wyjątkiem jest DOX'owanie (tzn. zbierania i publikowania czyichś danych osobowych i prywatnych informacji takich jak: imię, nazwisko, adres, numer telefonu itp. i upublicznianiu ich w celu dręczenia ich.)
+				Jedynym wyjątkiem jest DOX'owanie (tzn. zbierania i publikowania czyichś danych osobowych i prywatnych informacji takich jak: imię, nazwisko, adres, adres IP, numer telefonu itp. i upublicznianiu ich w celu dręczenia ich.)
 				<p></p>
 				<br>
 				<h4>Dlaczego grać na tym serwerze?</h4>
